# python_assignment

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  progress  pyproject.toml  readme.md
app/: main.py
app/celery/: tasks.py
app/db/: database.py
app/db_queries/: candidate_queries.py  skill_queries.py  user_queries.py
app/filters/: candidate.py
app/models/: __init__.py  candidate.py  experience.py  skills.py  user.py
app/routes/: candidate.py  skill.py  user.py
app/schemas/: candidate.py  condidate.py  user.py
app/services/: candidate.py  skill.py  user.py
app/tests/: conftest.py  test_candidate_routes.py  test_skills.py  test_tasks.py  test_user_routes.py
app/utils/: authentication.py  constants.py
migrations/: env.py
migrations/versions/: 7d53c6c8d2dd_inital_migrations.py
