[tool.poetry]
name = "assignment"
version = "0.1.0"
description = ""
authors = ["sohailcs140 <sohailcs140@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.0"}
psycopg2-binary = "^2.9.9"
SQLAlchemy = "^2.0.35"
alembic = "^1.13.3"
python-dotenv = "^1.0.1"
PyJWT = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi-pagination = "^0.12.31"
fastapi-filter = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
